# cpub

./: .gitignore  Cargo.toml  Title.epub.epubgen  content.txt  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
pkg/windows/: manifest.xml  packaginglayout.xml
src/: lib.rs  main.rs
src/cpub/: errors.rs  metadata.rs  mod.rs  pageimage.rs  templates.rs
src/cpub_creator/: error.rs  metadata.rs  mod.rs  templates.rs
