[package]
name = "cpub"
version = "0.1.0"
authors = ["Aftnet"]
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
xml-rs = "0.8"
image = "0.24"
zip = "0.5"
clap = { version = "3.1", features = ["cargo"] }
atoi = "1.0.0"
num-runtime-fmt = "0.1.2"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"